# ruby-check

./: CHANGELOG.md  README.md  kanji.json  pyproject.toml  ruby_check.py
.github/workflows/: release.yml
